# capacitor-plugin-llm

./: .gitignore  CapacitorPluginLlm.podspec  Package.swift  README.md  package.json  pnpm-lock.yaml  rollup.config.mjs
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android/src/main/java/com/kingsun/plugins/llm/: LLM.java  LLMPlugin.java  LlamaNative.java  ModelStore.java
android/src/main/jniLibs/arm64-v8a/cmake/ggml/: ggml-config.cmake  ggml-version.cmake
android/src/main/jniLibs/arm64-v8a/cmake/llama/: llama-config.cmake
android/src/main/jniLibs/arm64-v8a/pkgconfig/: llama.pc
ios/Sources/LLMPlugin/: LLM.swift  LLMPlugin.swift
ios/Tests/LLMPluginTests/: LLMPluginTests.swift
src/: definitions.ts  index.ts  web.ts
